game_sources = [
    './Server/DBCStores.cpp',
    './Server/WorldSession.cpp',
    './Server/SQLStorages.cpp',
    './Server/Opcodes.cpp',
    './Server/PacketLog.cpp',
    './Server/WorldSocket.cpp',
    './Cinematics/CinematicMgr.cpp',
    './Cinematics/M2Stores.cpp',
    './Mails/MassMailMgr.cpp',
    './Mails/MailHandler.cpp',
    './Mails/Mail.cpp',
    './vmap/WorldModel.cpp',
    './vmap/BIH.cpp',
    './vmap/VMapFactory.cpp',
    './vmap/ModelInstance.cpp',
    './vmap/GameObjectModel.cpp',
    './vmap/VMapManager2.cpp',
    './vmap/MapTree.cpp',
    './vmap/DynamicTree.cpp',
    './vmap/TileAssembler.cpp',
    './Quests/QuestDef.cpp',
    './Quests/QuestHandler.cpp',
    './Loot/LootHandler.cpp',
    './Loot/LootMgr.cpp',
    './LFG/LFGHandler.cpp',
    './GMTickets/GMTicketMgr.cpp',
    './GMTickets/GMTicketHandler.cpp',
    './Grids/ObjectGridLoader.cpp',
    './Grids/GridNotifiers.cpp',
    './Grids/GridStates.cpp',
#    './pchdef.cpp',
    './MotionGenerators/PointMovementGenerator.cpp',
    './MotionGenerators/PathMovementGenerator.cpp',
    './MotionGenerators/WaypointManager.cpp',
    './MotionGenerators/PathFinder.cpp',
    './MotionGenerators/WaypointMovementGenerator.cpp',
    './MotionGenerators/RandomMovementGenerator.cpp',
    './MotionGenerators/TargetedMovementGenerator.cpp',
    './MotionGenerators/IdleMovementGenerator.cpp',
    './MotionGenerators/FollowerReference.cpp',
    './MotionGenerators/MovementHandler.cpp',
    './MotionGenerators/MovementGenerator.cpp',
    './MotionGenerators/MoveMap.cpp',
    './MotionGenerators/HomeMovementGenerator.cpp',
    './MotionGenerators/MotionMaster.cpp',
    './MotionGenerators/WrapperMovementGenerator.cpp',
    './Weather/Weather.cpp',
    './DBScripts/ScriptMgr.cpp',
    './Social/SocialMgr.cpp',
    './Maps/MapPersistentStateMgr.cpp',
    './Maps/MapManager.cpp',
    './Maps/SpawnGroup.cpp',
    './Maps/SpawnManager.cpp',
    './Maps/MapUpdater.cpp',
    './Maps/TransportMgr.cpp',
    './Maps/TaxiHandler.cpp',
    './Maps/Map.cpp',
    './Maps/InstanceData.cpp',
    './Maps/MapDataContainer.cpp',
    './Maps/GridMap.cpp',
    './Maps/TransportSystem.cpp',
    './Maps/ObjectPosSelector.cpp',
    './Chat/Channel.cpp',
    './Chat/debugcmds.cpp',
    './Chat/Level3.cpp',
    './Chat/NpcCommands.cpp',
    './Chat/Level1.cpp',
    './Chat/ChatHandler.cpp',
    './Chat/ChannelMgr.cpp',
    './Chat/Level0.cpp',
    './Chat/Chat.cpp',
    './Chat/Level2.cpp',
    './Chat/ChannelHandler.cpp',
    './Chat/PetCommands.cpp',
    './Chat/TicketCommands.cpp',
    './Tools/CharacterDatabaseCleaner.cpp',
    './Tools/PlayerDump.cpp',
    './Globals/ObjectMgr.cpp',
    './Globals/ObjectAccessor.cpp',
    './Globals/Conditions.cpp',
    './Globals/Locales.cpp',
    './Globals/GraveyardManager.cpp',
    './OutdoorPvP/OutdoorPvPMgr.cpp',
    './OutdoorPvP/OutdoorPvPEP.cpp',
    './OutdoorPvP/OutdoorPvPNA.cpp',
    './OutdoorPvP/OutdoorPvPSI.cpp',
    './OutdoorPvP/OutdoorPvPHP.cpp',
    './OutdoorPvP/OutdoorPvPTF.cpp',
    './OutdoorPvP/OutdoorPvPZM.cpp',
    './OutdoorPvP/OutdoorPvP.cpp',
    './Trade/TradeHandler.cpp',
    './Combat/HostileRefManager.cpp',
    './Combat/DuelHandler.cpp',
    './Combat/CombatHandler.cpp',
    './Combat/ThreatManager.cpp',
    './Combat/CombatManager.cpp',
    './Pools/PoolManager.cpp',
    './Accounts/AccountMgr.cpp',
    './Movement/packet_builder.cpp',
    './Movement/util.cpp',
    './Movement/MoveSpline.cpp',
    './Movement/spline.cpp',
    './Movement/MoveSplineInit.cpp',
    './World/World.cpp',
    './World/WorldStateVariableManager.cpp',
    './World/WorldState.cpp',
    './AuctionHouseBot/AuctionHouseBot.cpp',
    './BattleGround/BattleGround.cpp',
    './BattleGround/BattleGroundWS.cpp',
    './BattleGround/BattleGroundMgr.cpp',
    './BattleGround/BattleGroundAA.cpp',
    './BattleGround/BattleGroundNA.cpp',
    './BattleGround/BattleGroundHandler.cpp',
    './BattleGround/BattleGroundEY.cpp',
    './BattleGround/BattleGroundBE.cpp',
    './BattleGround/BattleGroundAB.cpp',
    './BattleGround/BattleGroundAV.cpp',
    './BattleGround/BattleGroundRL.cpp',
    './Guilds/Guild.cpp',
    './Guilds/GuildHandler.cpp',
    './Guilds/GuildMgr.cpp',
    './AI/CreatureAIRegistry.cpp',
    './AI/BaseAI/NullCreatureAI.cpp',
    './AI/BaseAI/GameObjectAI.cpp',
    './AI/BaseAI/CreatureAI.cpp',
    './AI/BaseAI/UnitAI.cpp',
    './AI/BaseAI/TotemAI.cpp',
    './AI/BaseAI/GuardAI.cpp',
    './AI/BaseAI/GuardianAI.cpp',
    './AI/BaseAI/PossessedAI.cpp',
    './AI/BaseAI/PetAI.cpp',
    './AI/EventAI/CreatureEventAIMgr.cpp',
    './AI/EventAI/CreatureEventAI.cpp',
    './AI/CreatureAISelector.cpp',
    './AI/ScriptDevAI/base/follower_ai.cpp',
    './AI/ScriptDevAI/base/guard_ai.cpp',
    './AI/ScriptDevAI/base/pet_ai.cpp',
    './AI/ScriptDevAI/base/CombatAI.cpp',
    './AI/ScriptDevAI/base/escort_ai.cpp',
    './AI/ScriptDevAI/base/TimerAI.cpp',
    './AI/ScriptDevAI/system/system.cpp',
    './AI/ScriptDevAI/system/ScriptLoader.cpp',
    './AI/ScriptDevAI/ScriptDevAIMgr.cpp',
    './AI/ScriptDevAI/include/sc_instance.cpp',
    './AI/ScriptDevAI/include/sc_creature.cpp',
    './AI/ScriptDevAI/include/sc_grid_searchers.cpp',
    './AI/PlayerAI/PlayerAI.cpp',
    './AI/PlayerAI/CharmAI.cpp',
    './Skills/SkillExtraItems.cpp',
    './Skills/SkillDiscovery.cpp',
    './VoiceChat/VoiceChatHandler.cpp',
    './Anticheat/module/anticheatchatcommandsfunctions.cpp',
    './Anticheat/module/Warden/warden.cpp',
    './Anticheat/module/Warden/wardenmodulemgr.cpp',
    './Anticheat/module/Warden/wardenmodule.cpp',
    './Anticheat/module/Warden/SARC4.cpp',
    './Anticheat/module/Warden/wardenmac.cpp',
    './Anticheat/module/Warden/wardenwin.cpp',
    './Anticheat/module/Warden/wardenscan.cpp',
    './Anticheat/module/Warden/wardenscanmgr.cpp',
    './Anticheat/module/Antispam/antispammgr.cpp',
    './Anticheat/module/Antispam/antispam.cpp',
    './Anticheat/module/libanticheat.cpp',
    './Anticheat/module/Movement/movement.cpp',
    './Anticheat/module/config.cpp',
    './Anticheat/module/AddonHandler.cpp',
    './Addons/AddonHandler.cpp',
    './Groups/GroupReference.cpp',
    './Groups/Group.cpp',
    './Groups/GroupHandler.cpp',
    './GameEvents/GameEventMgr.cpp',
    './GameEvents/moon.cpp',
    './AuctionHouse/AuctionHouseHandler.cpp',
    './AuctionHouse/AuctionHouseMgr.cpp',
    './Arena/ArenaTeam.cpp',
    './Arena/ArenaTeamHandler.cpp',
    './Entities/GameObject.cpp',
    './Entities/Totem.cpp',
    './Entities/MiscHandler.cpp',
    './Entities/Player.cpp',
    './Entities/Corpse.cpp',
    './Entities/QueryHandler.cpp',
    './Entities/PetitionsHandler.cpp',
    './Entities/CreatureLinkingMgr.cpp',
    './Entities/ItemHandler.cpp',
    './Entities/UpdateData.cpp',
    './Entities/Unit.cpp',
    './Entities/TemporarySpawn.cpp',
    './Entities/UpdateFields.cpp',
    './Entities/RafHandler.cpp',
    './Entities/ItemEnchantmentMgr.cpp',
    './Entities/ObjectVisibility.cpp',
    './Entities/ObjectGuid.cpp',
    './Entities/Taxi.cpp',
    './Entities/NPCHandler.cpp',
    './Entities/Relations.cpp',
    './Entities/Item.cpp',
    './Entities/Bag.cpp',
    './Entities/Object.cpp',
    './Entities/Camera.cpp',
    './Entities/StatSystem.cpp',
    './Entities/PetHandler.cpp',
    './Entities/DynamicObject.cpp',
    './Entities/EntitiesMgr.cpp',
    './Entities/Transports.cpp',
    './Entities/CharacterHandler.cpp',
    './Entities/SkillHandler.cpp',
    './Entities/Creature.cpp',
    './Entities/Pet.cpp',
    './Entities/GossipDef.cpp',
    './Reputation/ReputationMgr.cpp',
    './Spells/SpellMgr.cpp',
    './Spells/UnitAuraProcHandler.cpp',
    './Spells/Spell.cpp',
    './Spells/Scripts/SpellScript.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Warlock.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Shaman.cpp',
    './Spells/Scripts/Scripting/ClassScripts/ScalingAuras.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Priest.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Druid.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Mage.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Warrior.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Hunter.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Paladin.cpp',
    './Spells/Scripts/Scripting/ClassScripts/Rogue.cpp',
    './Spells/SpellAuras.cpp',
    './Spells/SpellTargets.cpp',
    './Spells/SpellHandler.cpp',
    './Spells/SpellEffects.cpp',
    './Server/DBCStores.h',
    './Server/DBCStructure.h',
    './Server/SQLStorages.h',
    './Server/DBCfmt.h',
    './Server/WorldSocket.h',
    './Server/WorldSession.h',
    './Server/PacketLog.h',
    './Server/DBCEnums.h',
    './Server/Opcodes.h',
    './Cinematics/CinematicMgr.h',
    './Cinematics/M2Stores.h',
    './Cinematics/M2Structure.h',
    './Mails/MassMailMgr.h',
    './Mails/Mail.h',
    './vmap/VMapManager2.h',
    './vmap/WorldModel.h',
    './vmap/DynamicTree.h',
    './vmap/VMapTools.h',
    './vmap/GameObjectModel.h',
    './vmap/MapTree.h',
    './vmap/IVMapManager.h',
    './vmap/TileAssembler.h',
    './vmap/VMapDefinitions.h',
    './vmap/RegularGrid.h',
    './vmap/ModelInstance.h',
    './vmap/BIH.h',
    './vmap/VMapFactory.h',
    './vmap/BIHWrap.h',
    './Quests/QuestDef.h',
    './Loot/LootMgr.h',
    './GMTickets/GMTicketMgr.h',
    './Grids/CellImpl.h',
    './Grids/GridNotifiers.h',
    './Grids/Cell.h',
    './Grids/GridNotifiersImpl.h',
    './Grids/ObjectGridLoader.h',
    './Grids/GridStates.h',
    './MotionGenerators/PointMovementGenerator.h',
    './MotionGenerators/Path.h',
    './MotionGenerators/RandomMovementGenerator.h',
    './MotionGenerators/PathFinder.h',
    './MotionGenerators/WrapperMovementGenerator.h',
    './MotionGenerators/HomeMovementGenerator.h',
    './MotionGenerators/WaypointManager.h',
    './MotionGenerators/MoveMap.h',
    './MotionGenerators/FollowerReference.h',
    './MotionGenerators/MovementGenerator.h',
    './MotionGenerators/IdleMovementGenerator.h',
    './MotionGenerators/WaypointMovementGenerator.h',
    './MotionGenerators/MovementGeneratorImpl.h',
    './MotionGenerators/MotionMaster.h',
    './MotionGenerators/FollowerRefManager.h',
    './MotionGenerators/PathMovementGenerator.h',
    './MotionGenerators/MoveMapSharedDefines.h',
    './MotionGenerators/TargetedMovementGenerator.h',
    './Weather/Weather.h',
    './DBScripts/ScriptMgr.h',
    './Social/SocialMgr.h',
    './Maps/TransportSystem.h',
    './Maps/GridDefines.h',
    './Maps/GridMapDefines.h',
    './Maps/MapManager.h',
    './Maps/SpawnManager.h',
    './Maps/MapDataContainer.h',
    './Maps/MapWorkers.h',
    './Maps/InstanceData.h',
    './Maps/Map.h',
    './Maps/MapRefManager.h',
    './Maps/SpawnGroup.h',
    './Maps/MapReference.h',
    './Maps/TransportMgr.h',
    './Maps/MapUpdater.h',
    './Maps/SpawnGroupDefines.h',
    './Maps/GridMap.h',
    './Maps/MapPersistentStateMgr.h',
    './Maps/ObjectPosSelector.h',
    './Chat/Chat.h',
    './Chat/Channel.h',
    './Chat/ChannelMgr.h',
    './Tools/Language.h',
    './Tools/PlayerDump.h',
    './Tools/CharacterDatabaseCleaner.h',
    './Tools/Formulas.h',
    './Globals/Conditions.h',
    './Globals/SharedDefines.h',
    './Globals/ObjectMgr.h',
    './Globals/GraveyardManager.h',
    './Globals/ObjectAccessor.h',
    './Globals/Locales.h',
    './OutdoorPvP/OutdoorPvPMgr.h',
    './OutdoorPvP/OutdoorPvPEP.h',
    './OutdoorPvP/OutdoorPvPNA.h',
    './OutdoorPvP/OutdoorPvPSI.h',
    './OutdoorPvP/OutdoorPvPZM.h',
    './OutdoorPvP/OutdoorPvPHP.h',
    './OutdoorPvP/OutdoorPvP.h',
    './OutdoorPvP/OutdoorPvPTF.h',
    './Combat/HostileRefManager.h',
    './Combat/ThreatManager.h',
    './Combat/CombatManager.h',
    './Pools/PoolManager.h',
    './Accounts/AccountMgr.h',
    './Movement/MoveSpline.h',
    './Movement/MoveSplineFlag.h',
    './Movement/spline.h',
    './Movement/MoveSplineInit.h',
    './Movement/typedefs.h',
    './Movement/MoveSplineInitArgs.h',
    './Movement/packet_builder.h',
    './Movement/spline.impl.h',
    './World/WorldState.h',
    './World/World.h',
    './World/WorldStateVariableManager.h',
    './World/WorldStateDefines.h',
    './AuctionHouseBot/AuctionHouseBot.h',
    './BattleGround/BattleGroundAB.h',
    './BattleGround/BattleGroundAA.h',
    './BattleGround/BattleGroundMgr.h',
    './BattleGround/BattleGroundNA.h',
    './BattleGround/BattleGroundAV.h',
    './BattleGround/BattleGroundWS.h',
    './BattleGround/BattleGroundBE.h',
    './BattleGround/BattleGroundRL.h',
    './BattleGround/BattleGroundEY.h',
    './BattleGround/BattleGround.h',
    './Guilds/GuildMgr.h',
    './Guilds/Guild.h',
    './AI/BaseAI/UnitAI.h',
    './AI/BaseAI/CreatureAI.h',
    './AI/BaseAI/AIDefines.h',
    './AI/BaseAI/GuardianAI.h',
    './AI/BaseAI/GameObjectAI.h',
    './AI/BaseAI/CreatureAIImpl.h',
    './AI/BaseAI/PetAI.h',
    './AI/BaseAI/TotemAI.h',
    './AI/BaseAI/NullCreatureAI.h',
    './AI/BaseAI/PossessedAI.h',
    './AI/BaseAI/GuardAI.h',
    './AI/EventAI/CreatureEventAI.h',
    './AI/EventAI/CreatureEventAIMgr.h',
    './AI/CreatureAISelector.h',
    './AI/ScriptDevAI/base/pet_ai.h',
    './AI/ScriptDevAI/base/follower_ai.h',
    './AI/ScriptDevAI/base/escort_ai.h',
    './AI/ScriptDevAI/base/guard_ai.h',
    './AI/ScriptDevAI/base/TimerAI.h',
    './AI/ScriptDevAI/base/CombatAI.h',
    './AI/ScriptDevAI/ScriptDevAIMgr.h',
    './AI/ScriptDevAI/system/system.h',
    './AI/ScriptDevAI/system/ScriptLoader.h',
    './AI/ScriptDevAI/include/sc_instance.h',
    './AI/ScriptDevAI/include/sc_gossip.h',
    './AI/ScriptDevAI/include/sc_creature.h',
    './AI/ScriptDevAI/include/sc_common.h',
    './AI/ScriptDevAI/include/sc_grid_searchers.h',
    './AI/CreatureAIRegistry.h',
    './AI/PlayerAI/PlayerAI.h',
    './Skills/SkillExtraItems.h',
    './Skills/SkillDiscovery.h',
    './Anticheat/module/Warden/WardenKeyGeneration.h',
    './Anticheat/module/AnticheatChatCommands.h',
    './Anticheat/module/AnticheatChatCommandsFunctions.h',
    './Addons/AddonHandler.h',
    './Groups/GroupReference.h',
    './Groups/GroupRefManager.h',
    './Groups/Group.h',
    './GameEvents/GameEventMgr.h',
    './GameEvents/moon.h',
    './AuctionHouse/AuctionHouseMgr.h',
    './Arena/ArenaTeam.h',
    './Entities/CreatureLinkingMgr.h',
    './Entities/GameObject.h',
    './Entities/ObjectVisibility.h',
    './Entities/Unit.h',
    './Entities/NPCHandler.h',
    './Entities/ObjectGuid.h',
    './Entities/Player.h',
    './Entities/Bag.h',
    './Entities/CreatureSpellList.h',
    './Entities/DynamicObject.h',
    './Entities/UpdateMask.h',
    './Entities/ItemEnchantmentMgr.h',
    './Entities/Totem.h',
    './Entities/TemporarySpawn.h',
    './Entities/UnitEvents.h',
    './Entities/PlayerDefines.h',
    './Entities/Creature.h',
    './Entities/Camera.h',
    './Entities/Transports.h',
    './Entities/GossipDef.h',
    './Entities/Taxi.h',
    './Entities/ObjectDefines.h',
    './Entities/UpdateFields.h',
    './Entities/UpdateData.h',
    './Entities/EntitiesMgr.h',
    './Entities/ItemPrototype.h',
    './Entities/Object.h',
    './Entities/Corpse.h',
    './Entities/Pet.h',
    './Entities/Item.h',
#    './pchdef.h',
    './Reputation/ReputationMgr.h',
    './Spells/SpellTargets.h',
    './Spells/Spell.h',
    './Spells/SpellDefines.h',
    './Spells/SpellAuras.h',
    './Spells/SpellEffectDefines.h',
    './Spells/SpellTargetDefines.h',
    './Spells/Scripts/SpellScript.h',
    './Spells/SpellAuraDefines.h',
    './Spells/SpellMgr.h'
]

scriptdev_sources = [
    './AI/ScriptDevAI/scripts/battlegrounds/battlegrounds.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/wetlands.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/loch_modan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/eastern_plaguelands.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/searing_gorge.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/sunwell_plateauScripts.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_muru.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_felmyst.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_brutallus.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/sunwell_plateau.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_kalecgos.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_kiljaeden.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/boss_eredar_twins.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/isle_of_queldanas.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_baron_geddon.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_magmadar.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_ragnaros.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/molten_coreScripts.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_gehennas.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_lucifron.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_golemagg.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_sulfuron_harbinger.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_garr.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_majordomo_executus.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/molten_core.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/boss_shazzrah.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_coren_direbrew.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_general_angerforge.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_ambassador_flamelash.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_high_interrogator_gerstahn.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/boss_emperor_dagran_thaurissan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/instance_blackrock_depths.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/blackrock_depths.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_marli.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_venoxis.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/zulgurubScripts.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_renataki.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_thekal.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_arlokk.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/zulgurub.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_hakkar.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_jeklik.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/boss_mandokir.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_firemaw.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_vaelastrasz.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/blackwing_lair.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_razorgore.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_flamegor.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_nefarian.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_broodlord_lashlayer.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_chromaggus.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_victor_nefarius.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/boss_ebonroc.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/arathi_highlands.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/boss_kazzak.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/silverpine_forest.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/karazhan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_maiden_of_virtue.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_terestian_illhoof.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_curator.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_shade_of_aran.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/chess_event.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_midnight.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_nightbane.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_moroes.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_prince_malchezaar.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/bosses_opera.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/boss_netherspite.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/karazhanScripts.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stormwind_city.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/ironforge.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/silvermoon_city.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_pyroguard_emberseer.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_overlord_wyrmthalak.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/instance_blackrock_spire.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/boss_gyth.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/magisters_terraceScripts.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_priestess_delrissa.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/magisters_terrace.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_vexallus.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_selin_fireheart.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/boss_felblood_kaelthas.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/world_eastern_kingdoms.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/redridge_mountains.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/eversong_woods.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_cannon_master_willey.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/instance_stratholme.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_maleki_the_pallid.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/stratholme.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_dathrohan_balnazzar.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_order_of_silver_hand.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/boss_baroness_anastari.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blasted_lands.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/dun_morogh.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/undercity.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/boss_archaedas.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/uldaman.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/instance_uldaman.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/instance_scholomance.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/boss_jandice_barov.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/boss_darkmaster_gandling.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/scholomance.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/hinterlands.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/swamp_of_sorrows.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/burning_steppes.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/shadowfang_keep.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/instance_shadowfang_keep.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/instance_gnomeregan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/boss_thermaplugg.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/gnomeregan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/zulaman.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_malacrass.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_akilzon.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_nalorakk.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_janalai.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/zulamanScripts.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_zuljin.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/boss_halazzi.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stranglethorn_vale.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunken_temple/sunken_temple.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunken_temple/instance_sunken_temple.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/instance_scarlet_monastery.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_mograine_and_whitemane.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_headless_horseman.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_arcanist_doan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/boss_herod.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/western_plaguelands.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/westfall.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_gothik.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_maexxna.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_kelthuzad.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_loatheb.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_patchwerk.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_anubrekhan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_noth.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_grobbulus.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_four_horsemen.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_razuvious.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_faerlina.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_heigan.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_thaddius.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_sapphiron.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/instance_naxxramas.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/boss_gluth.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/elwynn_forest.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/ghostlands.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/alterac_mountains.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/boss_mr_smite.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/deadmines.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/instance_deadmines.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/tirisfal_glades.cpp',
    './AI/ScriptDevAI/scripts/examples/example_misc.cpp',
    './AI/ScriptDevAI/scripts/examples/example_escort.cpp',
    './AI/ScriptDevAI/scripts/examples/example_creature.cpp',
    './AI/ScriptDevAI/scripts/examples/example_gossip_codebox.cpp',
    './AI/ScriptDevAI/scripts/world/war_effort.cpp',
    './AI/ScriptDevAI/scripts/world/bosses_emerald_dragons.cpp',
    './AI/ScriptDevAI/scripts/world/areatrigger_scripts.cpp',
    './AI/ScriptDevAI/scripts/world/npcs_special.cpp',
    './AI/ScriptDevAI/scripts/world/suns_reach_reclamation.cpp',
    './AI/ScriptDevAI/scripts/world/quest_scripts.cpp',
    './AI/ScriptDevAI/scripts/world/item_scripts.cpp',
    './AI/ScriptDevAI/scripts/world/lunar_festival.cpp',
    './AI/ScriptDevAI/scripts/world/scourge_invasion.cpp',
    './AI/ScriptDevAI/scripts/world/shade_of_the_horseman.cpp',
    './AI/ScriptDevAI/scripts/world/guards.cpp',
    './AI/ScriptDevAI/scripts/world/mob_generic_creature.cpp',
    './AI/ScriptDevAI/scripts/world/npc_professions.cpp',
    './AI/ScriptDevAI/scripts/world/spell_scripts.cpp',
    './AI/ScriptDevAI/scripts/world/midsummer_festival.cpp',
    './AI/ScriptDevAI/scripts/world/world_map_scripts.cpp',
    './AI/ScriptDevAI/scripts/world/brewfest.cpp',
    './AI/ScriptDevAI/scripts/world/hallows_end.cpp',
    './AI/ScriptDevAI/scripts/world/childrens_week_tbc.cpp',
    './AI/ScriptDevAI/scripts/world/boss_highlord_kruul.cpp',
    './AI/ScriptDevAI/scripts/world/go_scripts.cpp',
    './AI/ScriptDevAI/scripts/outland/shartuul_transporter.cpp',
    './AI/ScriptDevAI/scripts/outland/bashir_landing.cpp',
    './AI/ScriptDevAI/scripts/outland/terokkar_forest.cpp',
    './AI/ScriptDevAI/scripts/outland/boss_doomlord_kazzak.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_supremus.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_bloodboil.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/black_temple.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_illidan.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_teron_gorefiend.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_warlord_najentus.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_mother_shahraz.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_shade_of_akama.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/illidari_council.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/black_templeScripts.cpp',
    './AI/ScriptDevAI/scripts/outland/black_temple/boss_reliquary_of_souls.cpp',
    './AI/ScriptDevAI/scripts/outland/shattrath_city.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_peninsula.cpp',
    './AI/ScriptDevAI/scripts/outland/blades_edge_mountains.cpp',
    './AI/ScriptDevAI/scripts/outland/boss_terokk.cpp',
    './AI/ScriptDevAI/scripts/outland/boss_doomwalker.cpp',
    './AI/ScriptDevAI/scripts/outland/nagrand.cpp',
    './AI/ScriptDevAI/scripts/outland/netherstorm.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_astromancer.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/the_eye.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_void_reaver.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_kaelthas.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/boss_alar.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/boss_nethermancer_sepethrea.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/mechanar.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/boss_mechano_lord_capacitus.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/boss_pathaleon_the_calculator.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/boss_harbinger_skyriss.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/boss_soccothrates.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/arcatraz.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/boss_dalliah.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/arcatrazScripts.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_laj.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_high_botanist_freywinn.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_thorngrin_the_tender.cpp',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/botanica/boss_warp_splinter.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/auchenai_crypts/boss_exarch_maladaar.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/auchenai_crypts/boss_shirrak.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/boss_yor.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/mana_tombs.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/boss_nexusprince_shaffar.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/mana_tombs/boss_pandemonius.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/boss_darkweaver_syth.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/boss_talon_king_ikiss.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/boss_anzu.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/sethekk_halls.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_grandmaster_vorpil.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_blackheart_the_inciter.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_ambassador_hellmaw.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/boss_murmur.cpp',
    './AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/instance_shadow_labyrinth.cpp',
    './AI/ScriptDevAI/scripts/outland/gruuls_lair/instance_gruuls_lair.cpp',
    './AI/ScriptDevAI/scripts/outland/gruuls_lair/boss_high_king_maulgar.cpp',
    './AI/ScriptDevAI/scripts/outland/gruuls_lair/boss_gruul.cpp',
    './AI/ScriptDevAI/scripts/outland/shadowmoon_valley.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/boss_broggok.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/boss_the_maker.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/boss_kelidan_the_breaker.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/blood_furnace.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/boss_warbringer_omrogg.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/boss_warchief_kargath_bladefist.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/shattered_halls.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/boss_nethekurse.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/magtheridons_lair/magtheridons_lair.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/magtheridons_lair/boss_magtheridon.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/boss_omor_the_unscarred.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/hellfire_ramparts.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/boss_nazan_and_vazruden.cpp',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/boss_watchkeeper_gargolmar.cpp',
    './AI/ScriptDevAI/scripts/outland/zangarmarsh.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_leotheras_the_blind.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_the_lurker_below.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_fathomlord_karathress.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/serpent_shrine.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_morogrim_tidewalker.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_lady_vashj.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/boss_hydross_the_unstable.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/slave_pens/slave_pens.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/slave_pens/boss_ahune.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/boss_warlord_kalithresh.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/boss_hydromancer_thespia.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/instance_steam_vault.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/boss_mekgineer_steamrigger.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/boss_swamplord_muselek.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/boss_black_stalker.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/boss_hungarfen.cpp',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/underbog.cpp',
    './AI/ScriptDevAI/scripts/outland/world_outland.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/the_barrens.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/azuremyst_isle.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/maraudon/instance_maraudon.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/maraudon/boss_noxxion.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/bloodmyst_isle.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ashenvale.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/feralas.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/blackfathom_deeps/instance_blackfathom_deeps.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/mulgore.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/winterspring.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/razorfen_downs/instance_razorfen_downs.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/razorfen_downs/razorfen_downs.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/durotar.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ungoro_crater.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/moonglade.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/silithus.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/felwood.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/orgrimmar.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/wailing_caverns/wailing_cavernsScripts.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/wailing_caverns/wailing_caverns.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/old_hillsbrad/instance_old_hillsbrad.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/old_hillsbrad/old_hillsbrad.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_anetheron.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_azgalor.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjalScripts.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_rage_winterchill.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_archimonde.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjalAI.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/boss_kazrogal.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjal.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/dark_portal.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/boss_aeonus.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/instance_dark_portal.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/boss_chrono_lord_deja.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/boss_temporus.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/desolace.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/temple_of_ahnqiraj.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_fankriss.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_bug_trio.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_viscidus.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/mob_anubisath_sentinel.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_skeram.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_huhuran.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_twinemperors.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_cthun.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_ouro.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/boss_sartura.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/teldrassil.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_ayamiss.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_ossirian.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_rajaxx.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_moam.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/ruins_of_ahnqirajScripts.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/ruins_of_ahnqiraj.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_kurinnaxx.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/boss_buru.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/stonetalon_mountains.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/world_kalimdor.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/thousand_needles.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/azshara.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/darkshore.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/zulfarrak/instance_zulfarrak.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/zulfarrak/zulfarrak.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/zulfarrak/boss_zumrah.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/razorfen_kraul/razorfen_kraul.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/razorfen_kraul/instance_razorfen_kraul.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/dire_maul/dire_maul.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/dire_maul/instance_dire_maul.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/boss_onyxia.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/instance_onyxias_lair.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/thunder_bluff.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/tanaris.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/dustwallow_marsh.cpp',
    './AI/ScriptDevAI/scripts/kalimdor/boss_azuregos.cpp',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunwell_plateau/sunwell_plateau.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/molten_core/molten_core.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_depths/blackrock_depths.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulgurub/zulgurub.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackwing_lair/blackwing_lair.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/karazhan/karazhan.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/blackrock_spire/blackrock_spire.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/magisters_terrace/magisters_terrace.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/stratholme/stratholme.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/world_eastern_kingdoms.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/uldaman/uldaman.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scholomance/scholomance.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/shadowfang_keep/shadowfang_keep.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/gnomeregan/gnomeregan.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/zulaman/zulaman.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/sunken_temple/sunken_temple.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/scarlet_monastery/scarlet_monastery.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/naxxramas/naxxramas.h',
    './AI/ScriptDevAI/scripts/eastern_kingdoms/deadmines/deadmines.h',
    './AI/ScriptDevAI/scripts/world/brewfest.h',
    './AI/ScriptDevAI/scripts/world/world_map_scripts.h',
    './AI/ScriptDevAI/scripts/world/scourge_invasion.h',
    './AI/ScriptDevAI/scripts/outland/black_temple/black_temple.h',
    './AI/ScriptDevAI/scripts/outland/world_outland.h',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_eye/the_eye.h',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/the_mechanar/mechanar.h',
    './AI/ScriptDevAI/scripts/outland/tempest_keep/arcatraz/arcatraz.h',
    './AI/ScriptDevAI/scripts/outland/auchindoun/sethekk_halls/sethekk_halls.h',
    './AI/ScriptDevAI/scripts/outland/auchindoun/shadow_labyrinth/shadow_labyrinth.h',
    './AI/ScriptDevAI/scripts/outland/gruuls_lair/gruuls_lair.h',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/blood_furnace/blood_furnace.h',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/shattered_halls/shattered_halls.h',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/magtheridons_lair/magtheridons_lair.h',
    './AI/ScriptDevAI/scripts/outland/hellfire_citadel/hellfire_ramparts/hellfire_ramparts.h',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/serpent_shrine/serpent_shrine.h',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/slave_pens/slave_pens.h',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/steam_vault/steam_vault.h',
    './AI/ScriptDevAI/scripts/outland/coilfang_reservoir/underbog/underbog.h',
    './AI/ScriptDevAI/scripts/kalimdor/maraudon/maraudon.h',
    './AI/ScriptDevAI/scripts/kalimdor/blackfathom_deeps/blackfathom_deeps.h',
    './AI/ScriptDevAI/scripts/kalimdor/razorfen_downs/razorfen_downs.h',
    './AI/ScriptDevAI/scripts/kalimdor/world_kalimdor.h',
    './AI/ScriptDevAI/scripts/kalimdor/wailing_caverns/wailing_caverns.h',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/old_hillsbrad/old_hillsbrad.h',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjal.h',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/hyjal/hyjalAI.h',
    './AI/ScriptDevAI/scripts/kalimdor/caverns_of_time/dark_portal/dark_portal.h',
    './AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/temple_of_ahnqiraj.h',
    './AI/ScriptDevAI/scripts/kalimdor/ruins_of_ahnqiraj/ruins_of_ahnqiraj.h',
    './AI/ScriptDevAI/scripts/kalimdor/zulfarrak/zulfarrak.h',
    './AI/ScriptDevAI/scripts/kalimdor/razorfen_kraul/razorfen_kraul.h',
    './AI/ScriptDevAI/scripts/kalimdor/dire_maul/dire_maul.h',
    './AI/ScriptDevAI/scripts/kalimdor/onyxias_lair/onyxias_lair.h',
]

playerbot_sources = [
    './PlayerBot/Base/PlayerbotMgr.h',
    './PlayerBot/Base/PlayerbotClassAI.h',
    './PlayerBot/Base/PlayerbotAI.h',
    './PlayerBot/revision_sql.h',
    './PlayerBot/config.h',
    './PlayerBot/AI/PlayerbotWarlockAI.h',
    './PlayerBot/AI/PlayerbotMageAI.h',
    './PlayerBot/AI/PlayerbotHunterAI.h',
    './PlayerBot/AI/PlayerbotRogueAI.h',
    './PlayerBot/AI/PlayerbotWarriorAI.h',
    './PlayerBot/AI/PlayerbotPaladinAI.h',
    './PlayerBot/AI/PlayerbotShamanAI.h',
    './PlayerBot/AI/PlayerbotDruidAI.h',
    './PlayerBot/AI/PlayerbotPriestAI.h',
]

game_inc = include_directories('../framework', '../shared', '../../dep/g3dlite', '../../dep/recastnavigation', '../../dep/src', '../../dep/include/gsoap', '../../dep/include/utf8cpp', '../../dep/include', '.', 'vmap', 'AuctionHouseBot', 'BattleGround', 'OutdoorPvP', 'PlayerBot')

if get_option('BUILD_SCRIPTDEV')
  game_sources = [game_sources, scriptdev_sources]
endif

if get_option('BUILD_PLAYERBOT')
  game_sources = [game_sources, playerbot_sources]
  install_data('PlayerBot/playerbot.conf.dist.in', rename: 'playerbot.conf.dist', install_dir: 'etc')
endif

if not get_option('USE_ANTICHEAT')
  game_sources = [game_sources, './Anticheat/Anticheat.cpp']
else
  install_data('Anticheat/module/anticheat.conf.dist.in', rename: 'anticheat.conf.dist', install_dir: 'etc')
  install_subdir('Anticheat/module/warden_modules', install_dir : 'bin') # mydir subtree -> include/mydir
endif

if get_option('BUILD_AHBOT')
  install_data('AuctionHouseBot/ahbot.conf.dist.in', rename: 'ahbot.conf.dist', install_dir: 'etc')
endif

if not get_option('PCH')
  pch_files = []
else
  pch_files = ['../game/pchdef.h', '../game/pchdef.cpp']
endif

game_args = ['-DDT_POLYREF64', '-D__ASSERT_MACROS_DEFINE_VERSIONS_WITHOUT_UNDERSCORES=0']

if get_option('BUILD_GAME_SERVER')
gamelib = static_library('game',
                        game_sources,
                        include_directories: game_inc,
                        dependencies: [zlib_dep, boost_dep, mariadb_dep, mysql_dep, postgresql_dep],
                        link_with: [frameworklib, libutf8cpp, sharedlib, g3dlib, detourlib],
                        cpp_args: game_args,
                        cpp_pch: pch_files,
                        install : false
)
endif
